start on fret table
beginning stages of fret board for tab creation

--- a/webpages/css/main.css
+++ b/webpages/css/main.css
@@ -76,6 +76,7 @@ header {
     'tabbox tabbox fretoptions';
   margin-top: 20px;
   grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1.4fr 1.4fr;
 }
 
 /* ------------------------------------- */
