main.html development
fret board up on website, including css for the fretboard

--- a/webpages/css/main.css
+++ b/webpages/css/main.css
@@ -8,6 +8,7 @@ body {
 
 main > div {
   border: 8px solid black;
+  border-radius: 20px;
   padding: 10px;
   margin: 10px;
 }
@@ -64,7 +65,7 @@ header {
 /* ------------------------------------ */
 
 .info { grid-area: info; }
-.fretboard { grid-area: fretboard; }
+.fretboardBox { grid-area: fretboardBox; }
 .fretoptions { grid-area: fretoptions; }
 .tabbox { grid-area: tabbox; }
 
@@ -72,13 +73,69 @@ header {
   display: grid;
   grid-template-areas:
     'info info info'
-    'fretboard fretboard fretoptions'
+    'fretboardBox fretboardBox fretoptions'
     'tabbox tabbox fretoptions';
   margin-top: 20px;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1.4fr 1.4fr;
+  grid-template-columns: 1.5fr 1.5fr 1fr;
 }
 
 /* ------------------------------------- */
-/* ----------- DIV CSS CODE  ----------- */
+/* ---------- FRETBOARD CODE  ---------- */
 /* ------------------------------------- */
+
+div.fretboardBox {
+  display: inline-block;
+  height: 20vh;
+}
+
+div.fretboard {
+  background-image: url(wood.jpg);
+}
+
+div.fret {
+  display: table-cell;
+  width: 4.2%;
+  margin: 0;
+  padding: 0;
+  /* border: 1em solid black; */
+  border-width: thin;
+}
+
+div.fret:hover {
+  background-color: sienna;
+}
+
+div.fretFirstRow {
+  display: table-row;
+  width: 100%;
+}
+
+div.fretMidRow {
+  display: table-row;
+  width: 100%;
+}
+
+div.fretLastRow {
+  display: table-row;
+  width: 100%;
+}
+
+div.fretLegendRow {
+  display: table-row;
+  width: 100%;
+  background-color: teal;
+}
+
+div.fretUnselectableLegend {
+  display: table-cell;
+  text-align: center;
+}
+
+div.fretStringLegend {
+  background-color: teal;
+  border-right: 5px solid black;
+}
+
+.tuningDropdown {
+  height: 25px;
+}
