--- a/webpages/css/main.css
+++ b/webpages/css/main.css
@@ -13,9 +13,9 @@ main > div {
   margin: 10px;
 }
 
-/* ------------------------------------ */
-/* ---------- NAVIGATION BAR ---------- */
-/* ------------------------------------ */
+/* -------------------------------------------------------------------------- */
+/* ---------- NAVIGATION BAR ------------------------------------------------ */
+/* -------------------------------------------------------------------------- */
 
 header {
   border: 8px solid black;
@@ -61,9 +61,9 @@ header {
   color: black;
 }
 
-/* ------------------------------------ */
-/* --------- MAIN GRID LAYOUT --------- */
-/* ------------------------------------ */
+/* -------------------------------------------------------------------------- */
+/* --------- MAIN GRID LAYOUT ----------------------------------------------- */
+/* -------------------------------------------------------------------------- */
 
 .info { grid-area: info; }
 .fretboardBox { grid-area: fretboardBox; }
@@ -80,9 +80,9 @@ header {
   grid-template-columns: 1.5fr 1.5fr 1fr;
 }
 
-/* ------------------------------------- */
-/* ---------- FRETBOARD CODE  ---------- */
-/* ------------------------------------- */
+/* -------------------------------------------------------------------------- */
+/* ---------- FRETBOARD CODE  ----------------------------------------------- */
+/* -------------------------------------------------------------------------- */
 
 div.fretboardBox {
   display: inline-block;
@@ -146,4 +146,24 @@ div.fretStringLegend {
 
 .tuningDropdown {
   height: 25px;
+}
+
+/* -------------------------------------------------------------------------- */
+/* ---------- TAB BOX CODE  ------------------------------------------------- */
+/* -------------------------------------------------------------------------- */
+
+div.taboptions {
+  border: 2px solid black;
+  padding: 5px;
+  background-color: gray;
+  border-radius: 20px;
+}
+
+.taboptions > * {
+  margin: 5px;
+}
+
+div.tabContent {
+  border: 5px solid black;
+  margin-top: 10px;
 }
