--- a/webpages/css/main.css
+++ b/webpages/css/main.css
@@ -182,6 +182,10 @@ div.staveoptions {
   margin: 5px;
 }
 
+.staveoptions > div {
+  display: inline-block;
+}
+
 /* ------------------------------ Tab Info CSS ------------------------------ */
 div.info {
   border: 5px solid black;
