Remove Staves Button
Button succesfully removes all staves from tabcontent

--- a/webpages/css/main.css
+++ b/webpages/css/main.css
@@ -210,6 +210,10 @@ div.tabcontent {
   border-radius: 20px;
 }
 
+textarea {
+  resize: none;
+}
+
 /* ----------------------------- Tab Option CSS ----------------------------- */
 div.taboptions {
   border: 5px solid black;
