--- a/webpages/css/main.css
+++ b/webpages/css/main.css
@@ -79,9 +79,8 @@ header {
 }
 
 /* -------------------------------------------------------------------------- */
-/* ---------- INFO BOX CODE  ------------------------------------------------ */
+/* ---------- FRET OPTIONS CODE --------------------------------------------- */
 /* -------------------------------------------------------------------------- */
-
 
 
 /* -------------------------------------------------------------------------- */
@@ -194,11 +193,10 @@ div.info {
   border-radius: 20px;
   margin: 5px;
   padding: 10px;
-  display: grid;
 }
 
 div.info > input {
-width: 50%;
+  width: 50%;
 }
 
 /* ----------------------------- Tab Output CSS ----------------------------- */
