--- a/webpages/css/main.css
+++ b/webpages/css/main.css
@@ -92,6 +92,7 @@ header {
 }
 
 /* Chord Creation Fretbox */
+
 div.miniFretboard {
   background-color: beige;
   position: relative;
@@ -141,8 +142,9 @@ div.fret2 {
   padding: 0;
   /* border: 1em solid black; */
   border-width: thin;
-  border-right: 2px solid black;
-  border-bottom: 1px solid black;
+  /* border-right: 2px solid black;
+  border-bottom: 1px solid black; */
+  border: 1px solid black;
 }
 
 div.fret2:hover {
@@ -172,6 +174,8 @@ div.miniFretLegend {
   width: 100%;
   background-color: teal;
 }
+
+
 /* -------------------------------------------------------------------------- */
 /* ---------- FRETBOARD CODE  ----------------------------------------------- */
 /* -------------------------------------------------------------------------- */
