--- a/webpages/css/main.css
+++ b/webpages/css/main.css
@@ -29,7 +29,7 @@ main > div {
 
 /* Modal Content */
 .modalContent {
-  background-color: dteal;
+  background-color: teal;
   margin: auto;
   padding: 20px;
   border: 5px solid black;
