edited tabs do not get duplicated in db
no more copying of a tab in db, now an if else statement separates actions for the two saveTab conditions

--- a/webpages/css/viewtabs.css
+++ b/webpages/css/viewtabs.css
@@ -75,14 +75,14 @@ header {
     'myContent myContent myContent myContent';
 }
 
-.contentDiv { grid-area: contentdiv }
+/* .contentDiv { grid-area: contentdiv }
 .infoDiv { grid-area: infodiv }
 
 #selectedContent {
   display: grid;
   grid-template-areas:
     'contentdiv infodiv';
-}
+} */
 
 /* TABLE CSS */
 table, th, td {
