--- a/webpages/css/menu.css
+++ b/webpages/css/menu.css
@@ -18,17 +18,26 @@ body {
   text-align: center;
 }
 
-#mainform > ul {
-  list-style-type: none;
-}
-
-button {
+.mainBtn {
   background-color: gray;
   border: 2px solid black;
   border-radius: 5px;
   cursor: pointer;
-  width: 25%;
-  padding: 10px;
-  margin: 10px;
+  width: 40%;
+  padding: 50px;
+  margin: 20px;
   font-size: 30px;
+}
+
+#signOutBtn {
+  background-color: gray;
+  border: 2px solid black;
+  padding: 15px;
+  margin: 10px;
+  width: 20%;
+  margin-left: 80vh;
+  margin-top: 10vh;
+  cursor: pointer;
+  border-radius: 5px;
+  font-size: 20px;
 }
