--- a/webpages/css/viewtabs.css
+++ b/webpages/css/viewtabs.css
@@ -14,6 +14,8 @@ main > div {
   background-color: gray;
 }
 
+
+
 /* NAVIGATION BAR */
 header {
   border: 8px solid black;
@@ -59,30 +61,52 @@ header {
   padding: 16px;
 }
 
+
+
 /* SEARCH CRITERIA  */
-.searchCriteria label {
-  display: block;
+.searchCriteria {
+  grid-area: criteria;
+  padding-left: 5px;
+  width: 100%;
+  position: sticky;
 }
 
-.searchCriteria { grid-area: criteria }
+.block {
+  padding-top: 10px;
+}
+
+.block label {
+  display: inline-block;
+  width: 100px;
+  text-align: right;
+}
+
+.infoInput > input {
+  width: 150px;
+}
+
+.showWhichTabs {
+  width: 173px;
+}
+
+#searchGenre {
+  width: 173px;
+}
+
 .tabTable { grid-area: tabTable }
-#selectedContent { grid-area: myContent }
+
+#selectedContent {
+  grid-area: myContent;
+  visibility: hidden;
+}
 
 .selectTab {
   display: grid;
   grid-template-areas:
-    'criteria tabTable tabTable tabTable'
-    'myContent myContent myContent myContent';
+    'tabTable criteria'
+    'myContent myContent';
 }
 
-/* .contentDiv { grid-area: contentdiv }
-.infoDiv { grid-area: infodiv }
-
-#selectedContent {
-  display: grid;
-  grid-template-areas:
-    'contentdiv infodiv';
-} */
 
 /* TABLE CSS */
 table, th, td {
@@ -92,4 +116,5 @@ table, th, td {
 table  {
   background-color: white;
   width: 100%;
+  visibility: hidden;
 }
