--- a/webpages/css/home.css
+++ b/webpages/css/home.css
@@ -113,3 +113,108 @@ body {
   cursor: pointer;
   box-shadow: inset 250px 0 0 0 #bcb0ee;
 }
+
+/* ----------------------------------------------------------------------------- */
+/* View Content CSS */
+.view-navbar {
+  grid-area: nav;
+}
+.view-contents {
+  grid-area: content;
+  background-color: #bb9cd9;
+  margin-top: 2em;
+  padding: 1em;
+}
+
+.main-container {
+  display: grid;
+  padding: 2em 4em 2em 4em;
+  grid-template-areas: "nav" "content";
+}
+
+/* View Navbar CSS */
+input[type="text"] {
+  padding: 0.5em;
+  border: none;
+  font-size: 18.5px;
+}
+textarea:focus,
+input:focus,
+select:focus {
+  outline: none;
+}
+
+.view-navbar {
+  background-color: #bb9cd9;
+  padding: 1em;
+  list-style-type: none;
+}
+.view-navbar li {
+  float: left;
+}
+
+.sort-by,
+.select-genre {
+  list-style-type: none;
+}
+.sort-by li,
+.select-genre li {
+  font-size: 18.5px;
+}
+.sort-by li p,
+.select-genre li p {
+  margin: 0;
+  padding: 0.5em;
+}
+
+.custom-select {
+  position: relative;
+}
+.custom-select select {
+  display: none;
+}
+.select-selected {
+  background-color: white;
+}
+/* Style the arrow inside the select element: */
+.select-selected:after {
+  position: absolute;
+  content: "";
+  top: 18px;
+  right: 20px;
+  width: 0;
+  height: 0;
+  border: 6px solid transparent;
+  border-color: black transparent transparent transparent;
+}
+/* Point the arrow upwards when the select box is open (active): */
+.select-selected.select-arrow-active:after {
+  border-color: transparent transparent black transparent;
+  top: 10px;
+}
+/* style the items (options), including the selected item: */
+.select-items div,
+.select-selected {
+  color: black;
+  padding: 8px 16px;
+  border: 1px solid transparent;
+  border-color: transparent transparent rgba(0, 0, 0, 0.1) transparent;
+  cursor: pointer;
+}
+/* Style items (options): */
+.select-items {
+  position: absolute;
+  background-color: white;
+  top: 100%;
+  left: 0;
+  right: 0;
+  z-index: 99;
+}
+/* Hide the items when the select box is closed: */
+.select-hide {
+  display: none;
+}
+.select-items div:hover,
+.same-as-selected {
+  background-color: rgba(0, 0, 0, 0.1);
+}
