--- a/webpages/css/home.css
+++ b/webpages/css/home.css
@@ -44,6 +44,7 @@ body {
 
 .heading {
   text-align: center;
+  margin-bottom: 4px;
 }
 
 .subheading {
@@ -112,6 +113,14 @@ body {
 .createAccountBtn input:hover {
   cursor: pointer;
   box-shadow: inset 250px 0 0 0 #bcb0ee;
+}
+
+.p-footer {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  padding-right: 6px;
+  margin-bottom: 6px;
 }
 
 /* ----------------------------------------------------------------------------- */
