--- a/webpages/css/home.css
+++ b/webpages/css/home.css
@@ -13,11 +13,25 @@ body {
   background-color: #bcb0ee;
   margin: 0;
   padding: 0;
+  overflow-y: hidden;
 }
 
 * {
   box-sizing: border-box;
   font-family: Raleway;
+}
+
+body::-webkit-scrollbar,
+.tab-content::-webkit-scrollbar {
+  width: 0.75vw;
+}
+body::-webkit-scrollbar-track,
+.tab-content::-webkit-scrollbar-track {
+  background-color: darkgray;
+}
+body::-webkit-scrollbar-thumb,
+.tab-content::-webkit-scrollbar-thumb {
+  background-color: gray;
 }
 
 /* ----------------------------------------------------------------------------- */
@@ -272,7 +286,7 @@ body {
   height: 100%;
   grid-template-rows: max-content;
   grid-template-areas: "nav" "content";
-  animation: fade-in 2s;
+  animation: fade-in 1s;
 }
 
 .tab-info-playback {
@@ -294,7 +308,7 @@ body {
   grid-template-columns: max-content;
   grid-template-columns: 80fr 25.9fr;
   grid-template-areas: "tabcontent infoplayback";
-  animation: fade-in 2s;
+  animation: fade-in 1s;
 }
 
 .tab-info-playback {
@@ -318,7 +332,7 @@ body {
   padding: 1em;
   height: 90%;
   overflow-y: auto;
-  max-height: 60vw;
+  max-height: 42.5vw;
 }
 .tab-content * {
   animation: fade-in 1s;
@@ -328,6 +342,10 @@ body {
 } */
 textarea {
   resize: none;
+  background-color: #bb9cd9;
+}
+.tab-content h3 {
+  border-bottom: 2px solid black;
 }
 
 /* Div Fading CSS */
@@ -335,9 +353,11 @@ textarea {
 @keyframes fade-in {
   from {
     opacity: 0;
+    transform: translateY(100px);
   }
   to {
     opacity: 1;
+    transform: translateY(0);
   }
 }
 
@@ -356,6 +376,15 @@ textarea:focus,
 input:focus,
 select:focus {
   outline: none;
+}
+
+.search-bar {
+  width: 100px;
+  transition: width 0.4s ease-in-out;
+  font-family: Raleway;
+}
+.search-bar:focus {
+  width: 300px;
 }
 
 .view-navbar {
@@ -449,14 +478,26 @@ select:focus {
   -webkit-transition: background-color 500ms linear;
   -ms-transition: background-color 500ms linear;
   transition: background-color 500ms linear;
+  padding-left: 0;
 }
+.results-list ul {
+  padding: 0.75em;
+  margin-bottom: 1em;
+}
+.results-list-elem li {
+  display: inline;
+}
+
 .results-list-elem:hover {
   cursor: pointer;
   background-color: gray;
 }
 
 .results-list-elem * {
-  padding: 0.75em;
   font-size: 18.5px;
   margin-top: 0;
+}
+
+.results-list-elem b {
+  padding-left: 0;
 }
